feat: reply (#6)
* feat: reply

* Update server/http/api/review_api.go


---------
