# server/http/api/review_api.go
@@ -195,3 +195,30 @@ func DeleteReview(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, RespSuccess(c, "delete success"))
 }
+
+// ReplyReview Reply.
+//
+// @Summary Review Reply
+// @Description Reply an review record.
+// @Tags Review
+// @Accept json
+// @Produce json
+// @Param user body types.CreateReviewRequest true "CreateReviewRequest"
+// @Success 200	{object} data.BaseResponse{data=types.CreateReviewRequest}
+// @Failure 400 {object} data.BaseResponse{data=string}
+// @Failure 500 {object} data.BaseResponse{data=string}
+// @Router /comment-ms/v1/merchant/reply [post]
+func ReplyReview(c *gin.Context) {
+	var req types.CreateReviewRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, data.BaseResponse{ErrMsg: err.Error()})
+		return
+	}
+	userID := c.Value("userID").(int)
+	err := service.GetReviewServiceInstance().CreateReview(c, req, userID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, data.BaseResponse{ErrMsg: err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, RespSuccess(c, "reply review success"))
+}
